--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -34,14 +34,14 @@
 
 
         <div class="card grey darken-1">
-            <div class="card-content white-text">
+            <div class="card-content black-text">
 
 
-                <input placeholder="First Name" id="first_name" type="text" class="validate">
-                <label for="first_name">First Name</label>
+                <input  id="firstName" type="text" class="black-text">
+                <label class="black-text" for="first_name">First Name</label>
 
-                <input placeholder="Image Link" id="first_name" type="text" class="validate">
-                <label class="black-text" for="image_link">Image Link</label>
+                <input  id="imageLink" type="text" class="validate">
+                <label class="black-text" for="imagelink">Image Link</label>
                 <div class="right">
 
                 </div>
@@ -56,8 +56,8 @@
 
     <div class="container   " id="con">
 
-        <div class="card-panel grey darken-1 white-text">
-            <h3 class=" card-title">check one box 1 being strongly disagree 5 being strongly agree </h2>
+        <div class="card-panel grey darken-1  center">
+            <h3 class=" card-title black-text">Answer accordingly </h2>
         </div>
 
 
@@ -81,7 +81,7 @@
 
                 <div class="center row ">
 
-                    <a class="waves-effect waves-light btn-large btn-flat black-text ">Submit</a>
+                    <a class="waves-effect waves-light btn-large btn-flat black-text " id="submit">Submit</a>
 
                 </div>
             </div>
