--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -10,7 +10,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -19,13 +19,13 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="black">
-    <header class="container grey darken-1">
+<body class="grey darken-4">
+    <header class="container black">
 
-        <h2 class="card-panel grey darken-1 center black-text ">Survey Questions</h2>
+        <h2 class="card-panel black center orange-text darken-4 ">Survey Questions</h2>
 
 
     </header>
@@ -33,15 +33,15 @@
     <div class="container ">
 
 
-        <div class="card grey darken-1">
-            <div class="card-content black-text">
+        <div class="card black">
+            <div class="card-content orange-text darken-4">
 
 
-                <input  id="firstName" type="text" class="black-text">
-                <label class="black-text" for="first_name">First Name</label>
+                <input  id="firstName" type="text" class="orange-text darken-4">
+                <label class="orange-text darken-4" for="first_name">First Name</label>
 
-                <input  id="imageLink" type="text" class="validate">
-                <label class="black-text" for="imagelink">Image Link</label>
+                <input  id="imageLink" type="text" class="orange-text darken-4">
+                <label class="orange-text darken-4" for="imagelink">Image Link</label>
                 <div class="right">
 
                 </div>
@@ -56,8 +56,8 @@
 
     <div class="container   " id="con">
 
-        <div class="card-panel grey darken-1  center">
-            <h3 class=" card-title black-text">Answer accordingly </h2>
+        <div class="card-panel black  center">
+            <h3 class=" card-title orange-text darken-4">Answer accordingly </h2>
         </div>
 
 
@@ -75,13 +75,13 @@
 
     <div class="container">
 
-        <div class="card grey darken-1">
+        <div class="card black">
 
             <div class="card-action">
 
                 <div class="center row ">
 
-                    <a class="waves-effect waves-light btn-large btn-flat black-text " id="submit">Submit</a>
+                    <a class="waves-effect waves-light btn-large btn-flat orange-text darken-4 " id="submit">Submit</a>
 
                 </div>
             </div>
